--- a/index.html
+++ b/index.html
@@ -25,15 +25,15 @@
                         <img src="01d@2x.png" alt="" class="weather-icon">
                     </div>
                     <div class="location">
-                        <div class="city">New York, USA</div>
+                        <div class="city">Swallow Falls, USA</div>
                         <div class="date">Wednesday, 13 October 2021</div>
                     </div>
                     <hr>
                     <div class="current">
-                        <div class="temp">Temp: <span>12<span>°C</span></span></div>
+                        <div class="temp">Temp: <span>32<span>°C</span></span></div>
                         <div class="weather">Weather: <span>Sunny</span></div>
                         <div class="weather-des">Description: <br><span>Sunny with chance of meatballs</span></div>
-                        <div class="temp-range">Temp Range: <span>10°C /15°C</span></div>
+                        <div class="temp-range">Temp Range: <span>29°C /35°C</span></div>
                     </div>
                 </div>
             </section>
