--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
             </section>
         </div>
     </div>
+    <script src='config.js'></script>
     <script src="script.js"></script>
 </body>
 </html>
